# i960

./: .gitignore  .ycm_extra_conf.py  ArithmeticControls.cc  ArithmeticControls.cpp  ArithmeticControls.h  CMakeLists.txt  ConditionCode.h  DefFactQuery.def  DoubleRegister.cc  DoubleRegister.h  ExpandAllOpcodes.def  GenerateOpcodesEnumeration.clp  InitializationBootRecord.h  Instruction.cc  Instruction.cpp  Instruction.h  InternalDataRam.h  Makefile  MemoryMap.h  NormalRegister.cc  NormalRegister.h  Operand.cc  Operand.h  PMCONRegister.h  ProcessControls.cc  ProcessControls.h  ProcessorControlBlock.h  QuadRegister.cc  QuadRegister.h  README.md  Records.h  StartupRecord.h  Timer.h  TripleRegister.cc  TripleRegister.h  archlevel.h  bus.h  conditional_kinds.def  config.mk  core.cc  (+28 more)
arduino/80960SA_ADScanner/: 80960SA_ADScanner.ino
arduino/WaveformEmulator_80960SA/: WaveformEmulator_80960SA.ino
clp/: AssemblerMnemonics.clp  GenerateOpcodesEnumeration.clp  InstructionsWithOpcodesTypeMnemonic.clp  cmacro.clp  i960kb_ops.clp  i960kb_raw.clp  i960mc_ops.clp  test_mov_generation.clp
fritzing/80960SB/: 80960SB.fzpz  part.80960SB_9e98a99ff9ed29acd5a43263042863c8_1.fzp
kicad/: README.md
kicad/BufferedBoard/: ADReadLines.sch  ADWriteLines.sch  AddressLines.sch  (+2 more)
sim/: ArithmeticControls.h  CMakeLists.txt  ConditionCode.h  ExpandAllOpcodes.def  MemoryMap.h  NormalRegister.h  PMCONRegister.h  StartupRecord.h  TripleRegister.h  compile_commands.json  decode960jx.cc  opcodes.def  sim960jx.cc  types.h
src/: CS_INIT.S  LICENSE  README.md
tmp/: _exit.c  iris.c  println.c  sbrk.c
(+2976 files in other folders)
